[#400] CSS fix for layout issues on Team page

--- a/code/wp-content/themes/Akvo-responsive/css/main.css
+++ b/code/wp-content/themes/Akvo-responsive/css/main.css
@@ -3788,7 +3788,7 @@ ul.staff li {
   display: inline;
   float: left;
   margin: 0em 0.8% 0px 0em;
-  min-height: 200px;
+  min-height: 205px;
   position: relative;
   width: 16%; }
 
